Unit test/errors.out
In file included from ../Peano/Peano/src/exahype2/CellData.cpp:1:
../Peano/Peano/src/exahype2/CellData.h:85:23: error: ‘Dimensions’ was not declared in this scope
   85 |     tarch::la::Vector<Dimensions,double>*   cellCentre;
      |                       ^~~~~~~~~~
../Peano/Peano/src/exahype2/CellData.h:85:40: error: template argument 1 is invalid
   85 |     tarch::la::Vector<Dimensions,double>*   cellCentre;
      |                                        ^
../Peano/Peano/src/exahype2/CellData.h:86:23: error: ‘Dimensions’ was not declared in this scope
   86 |     tarch::la::Vector<Dimensions,double>*   cellSize;
      |                       ^~~~~~~~~~
../Peano/Peano/src/exahype2/CellData.h:86:40: error: template argument 1 is invalid
   86 |     tarch::la::Vector<Dimensions,double>*   cellSize;
      |                                        ^
../Peano/Peano/src/exahype2/CellData.h:125:31: error: ‘Dimensions’ was not declared in this scope
  125 |       const tarch::la::Vector<Dimensions,double>&   cellCentre_,
      |                               ^~~~~~~~~~
../Peano/Peano/src/exahype2/CellData.h:125:48: error: template argument 1 is invalid
  125 |       const tarch::la::Vector<Dimensions,double>&   cellCentre_,
      |                                                ^
../Peano/Peano/src/exahype2/CellData.h:126:31: error: ‘Dimensions’ was not declared in this scope
  126 |       const tarch::la::Vector<Dimensions,double>&   cellSize_,
      |                               ^~~~~~~~~~
../Peano/Peano/src/exahype2/CellData.h:126:48: error: template argument 1 is invalid
  126 |       const tarch::la::Vector<Dimensions,double>&   cellSize_,
      |                                                ^
../Peano/Peano/src/exahype2/CellData.cpp:7:27: error: ‘Dimensions’ was not declared in this scope
    7 |   const tarch::la::Vector<Dimensions, double>& cellCentre_,
      |                           ^~~~~~~~~~
../Peano/Peano/src/exahype2/CellData.cpp:7:45: error: template argument 1 is invalid
    7 |   const tarch::la::Vector<Dimensions, double>& cellCentre_,
      |                                             ^
../Peano/Peano/src/exahype2/CellData.cpp:8:27: error: ‘Dimensions’ was not declared in this scope
    8 |   const tarch::la::Vector<Dimensions, double>& cellSize_,
      |                           ^~~~~~~~~~
../Peano/Peano/src/exahype2/CellData.cpp:8:45: error: template argument 1 is invalid
    8 |   const tarch::la::Vector<Dimensions, double>& cellSize_,
      |                                             ^
../Peano/Peano/src/exahype2/CellData.cpp: In constructor ‘exahype2::CellData::CellData(int)’:
../Peano/Peano/src/exahype2/CellData.cpp:26:60: error: ‘Dimensions’ was not declared in this scope
   26 |   cellCentre    = tarch::allocateMemory< tarch::la::Vector<Dimensions, double> >(numberOfCells_, tarch::MemoryLocation::ManagedSharedAcceleratorDeviceMemory);
      |                                                            ^~~~~~~~~~
../Peano/Peano/src/exahype2/CellData.cpp:26:78: error: template argument 1 is invalid
   26 |   cellCentre    = tarch::allocateMemory< tarch::la::Vector<Dimensions, double> >(numberOfCells_, tarch::MemoryLocation::ManagedSharedAcceleratorDeviceMemory);
      |                                                                              ^
../Peano/Peano/src/exahype2/CellData.cpp:26:81: error: no matching function for call to ‘allocateMemory<<expression error> >(int&, tarch::MemoryLocation)’
   26 |   cellCentre    = tarch::allocateMemory< tarch::la::Vector<Dimensions, double> >(numberOfCells_, tarch::MemoryLocation::ManagedSharedAcceleratorDeviceMemory);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ../Peano/Peano/src/tarch/la/Vector.h:7,
                 from ../Peano/Peano/src/exahype2/CellData.h:6,
                 from ../Peano/Peano/src/exahype2/CellData.cpp:1:
../Peano/Peano/src/tarch/accelerator/accelerator.h:82:6: note: candidate: ‘template<class T> T* tarch::allocateMemory(int, tarch::MemoryLocation, int)’
   82 |   T* allocateMemory(int size, MemoryLocation location, [[maybe_unused]] int device = -1) {
      |      ^~~~~~~~~~~~~~
../Peano/Peano/src/tarch/accelerator/accelerator.h:82:6: note:   template argument deduction/substitution failed:
../Peano/Peano/src/exahype2/CellData.cpp:26:81: error: template argument 1 is invalid
   26 |   cellCentre    = tarch::allocateMemory< tarch::la::Vector<Dimensions, double> >(numberOfCells_, tarch::MemoryLocation::ManagedSharedAcceleratorDeviceMemory);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Peano/Peano/src/exahype2/CellData.cpp:27:81: error: no matching function for call to ‘allocateMemory<<expression error> >(int&, tarch::MemoryLocation)’
   27 |   cellSize      = tarch::allocateMemory< tarch::la::Vector<Dimensions, double> >(numberOfCells_, tarch::MemoryLocation::ManagedSharedAcceleratorDeviceMemory);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ../Peano/Peano/src/tarch/la/Vector.h:7,
                 from ../Peano/Peano/src/exahype2/CellData.h:6,
                 from ../Peano/Peano/src/exahype2/CellData.cpp:1:
../Peano/Peano/src/tarch/accelerator/accelerator.h:82:6: note: candidate: ‘template<class T> T* tarch::allocateMemory(int, tarch::MemoryLocation, int)’
   82 |   T* allocateMemory(int size, MemoryLocation location, [[maybe_unused]] int device = -1) {
      |      ^~~~~~~~~~~~~~
../Peano/Peano/src/tarch/accelerator/accelerator.h:82:6: note:   template argument deduction/substitution failed:
../Peano/Peano/src/exahype2/CellData.cpp:27:81: error: template argument 1 is invalid
   27 |   cellSize      = tarch::allocateMemory< tarch::la::Vector<Dimensions, double> >(numberOfCells_, tarch::MemoryLocation::ManagedSharedAcceleratorDeviceMemory);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
rm: cannot remove 'crct_test': No such file or directory
